# xixi

./: CMakeLists.txt  LICENSE  README.md
cmake/: uninstall.cmake.in
debian/xixi/DEBIAN/: control
doc/: Stack.md
src/CRC32/: CRC32.c  CRC32.h
src/DynamicStack/: DynamicStack.c  DynamicStack.h  QDynamicStack.c  QDynamicStack.h
src/Stack/: QStack.c  QStack.h  Stack.c  Stack.h  Stack.lua
src/UIID/: UIID.c  UIID.h
src/URL/: URL.c  URL.h
src/UUID/: UUID.c  UUID.h
